# zerminal

./: .gitignore  CONTRIBUTING.md  Cargo.toml  remove_batch.py
.github/: CODEOWNERS.hold
.github/workflows/: bump_patch_version.yml  bump_zed_version.yml  compliance_check.yml  deploy_collab.yml  extension_tests.yml  release.yml  release_nightly.yml  run_bundling.yml  run_tests.yml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  default.json  mux-default.json  mux-tmux.json  mux-vim.json  mux-wezterm.json  screen.json  tmux.json  zellij.json
assets/settings/: default.json
crates/acp_thread/: Cargo.toml
crates/acp_tools/: Cargo.toml
crates/action_log/: Cargo.toml
crates/activity_indicator/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent_servers/: Cargo.toml
crates/agent_settings/: Cargo.toml
crates/agent_skills/: Cargo.toml  agent_skills.rs
crates/agent_ui/: Cargo.toml
crates/ai_onboarding/: Cargo.toml
crates/ai_onboarding/src/: agent_api_keys_onboarding.rs  agent_panel_onboarding_content.rs  ai_onboarding.rs  edit_prediction_onboarding_content.rs
crates/anthropic/: Cargo.toml
crates/audio/: Cargo.toml
crates/auto_update/: Cargo.toml
crates/auto_update_helper/: Cargo.toml
crates/auto_update_helper/src/: updater.rs
crates/auto_update_ui/: Cargo.toml
crates/bedrock/: Cargo.toml
crates/breadcrumbs/: Cargo.toml
crates/breadcrumbs/src/: breadcrumbs.rs
crates/call/: Cargo.toml
crates/channel/: Cargo.toml
crates/cli/: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/cloud_api_client/: Cargo.toml
crates/cloud_api_types/: Cargo.toml
crates/cloud_llm_client/: Cargo.toml
crates/codestral/: Cargo.toml
crates/collab_ui/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/component_preview/: Cargo.toml
crates/context_server/: Cargo.toml
crates/copilot/: Cargo.toml
crates/copilot_chat/: Cargo.toml
crates/copilot_ui/: Cargo.toml
crates/csv_preview/: Cargo.toml
crates/dap/: Cargo.toml
crates/dap_adapters/: Cargo.toml
crates/debug_adapter_extension/: Cargo.toml
crates/debugger_tools/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/deepseek/: Cargo.toml
crates/deepseek/src/: deepseek.rs
crates/dev_container/: Cargo.toml
crates/docs_preprocessor/: Cargo.toml
crates/edit_prediction/: Cargo.toml
crates/edit_prediction_context/: Cargo.toml
crates/edit_prediction_metrics/: Cargo.toml
crates/edit_prediction_types/: Cargo.toml
crates/edit_prediction_ui/: Cargo.toml
crates/editor/: Cargo.toml
crates/etw_tracing/: etw_tracing.rs
crates/eval_utils/: Cargo.toml
crates/explorer_command_injector/: AppxManifest-Nightly.xml  AppxManifest-Preview.xml  AppxManifest.xml
crates/extension/: Cargo.toml
crates/extension_cli/: Cargo.toml
crates/extension_host/: Cargo.toml
crates/extensions_ui/: Cargo.toml
crates/feedback/: Cargo.toml
crates/feedback/src/: feedback.rs
crates/file_finder/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/google_ai/: Cargo.toml
crates/image_viewer/: Cargo.toml
crates/input_latency_ui/: Cargo.toml
crates/input_latency_ui/src/: input_latency_ui.rs
crates/inspector_ui/: Cargo.toml  build.rs
crates/install_cli/: Cargo.toml
crates/journal/: Cargo.toml
crates/json_schema_store/: Cargo.toml
crates/language/: Cargo.toml
crates/language_model/: Cargo.toml
crates/language_model_core/: Cargo.toml
crates/language_models/: Cargo.toml
crates/language_models_cloud/: Cargo.toml
crates/language_onboarding/: Cargo.toml
crates/language_onboarding/src/: python.rs
crates/language_tools/: Cargo.toml
crates/languages/: Cargo.toml
crates/livekit_api/: Cargo.toml
crates/livekit_client/: Cargo.toml
crates/markdown/: Cargo.toml
crates/markdown/src/: mermaid.rs
crates/media/: Cargo.toml
crates/media/src/: media.rs
crates/mux/: Cargo.toml
crates/mux/src/: mux.rs
crates/mux/tests/: mux_domain.rs  network_fault.rs
crates/mux_server/: Cargo.toml
crates/mux_server/src/: coalescing.rs  connection.rs  dec2026.rs  main.rs  mux_server.rs  session.rs  tests.rs
crates/mux_server/tests/: grid_sync.rs  layout.rs
crates/quickjs_runtime/: Cargo.toml
crates/quickjs_runtime/src/: quickjs_runtime.rs
crates/quickjs_runtime/tests/: fuzz.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: scheduler.rs
crates/shadow_snapshot/: Cargo.toml
crates/shadow_snapshot/src/: delta_chain.rs  git_hook.rs
crates/shadow_snapshot/tests/: property_tests.rs
crates/streaming_diff/: Cargo.toml
crates/streaming_diff/src/: streaming_diff.rs
crates/transport_resilient/: Cargo.toml
crates/transport_resilient/src/: crypto.rs  rtt.rs  tests.rs  transport.rs  transport_resilient.rs
crates/vim/: Cargo.toml
crates/vim_mode_setting/: Cargo.toml
crates/vim_mode_setting/src/: vim_mode_setting.rs
crates/watch/: Cargo.toml
crates/watch/src/: watch.rs
crates/windows_resources/: Cargo.toml
crates/windows_resources/src/: windows_resources.rs
crates/z3rm/: Cargo.toml
crates/z3rm/src/: daemon.rs  input.rs  log_viewer.rs  main.rs
crates/z3rm/src/cli/: dispatch.rs
crates/z3rm/tests/: e2e.rs
crates/zerminal/: Cargo.toml
crates/zerminal/resources/: zerminal.desktop.in
crates/zerminal/resources/flatpak/: manifest-template.json  zerminal.metainfo.xml.in
crates/zerminal/resources/snap/: snapcraft.yaml.in
crates/zerminal/resources/windows/: zerminal.iss  zerminal.sh
crates/zerminal/src/: main.rs  reliability.rs  zed.rs
crates/zerminal/src/reliability/: hang_detection.rs
crates/zerminal/src/zed/: app_menus.rs  edit_prediction_registry.rs  open_listener.rs  open_url_modal.rs  quick_action_bar.rs  telemetry_log.rs  windows_only_instance.rs
crates/zerminal/src/zed/quick_action_bar/: preview.rs  repl_menu.rs
crates/zerminal_macros/: Cargo.toml
crates/zerminal_macros/src/: zerminal_macros.rs
nix/: build.nix
script/: bundle-freebsd  bundle-linux  bundle-mac  bundle-windows.ps1  debug-cli  determine-release-channel  determine-release-channel.ps1  install-linux  install.sh  snap-build  uninstall.sh
(+455 files in other folders)
