[[bin]]
name = "auto_update_helper"
path = "src/auto_update_helper.rs"
doctest = false

[package]
name = "auto_update_helper"
version = "0.1.0"
license = "GPL-3.0-or-later"

[lints]
workspace = true

[package.edition]
workspace = true

[package.publish]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.log]
workspace = true

[dependencies.simplelog]
workspace = true

[build-dependencies.windows_resources]
path = "../windows_resources"

[target.'cfg(target_os = "windows")'.dependencies]
scopeguard = "1.2"

[package.metadata.docs.rs]
targets = [ "x86_64-pc-windows-msvc",]

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true

[target.'cfg(target_os = "windows")'.dev-dependencies.tempfile]
workspace = true
