[package]
name = "feedback"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/feedback.rs"

[features]
test-support = []

[dependencies]
zerminal_macros = { workspace = true }
zerminal_macros_types = { workspace = true }
inventory = "0.3"
extension_host.workspace = true
gpui.workspace = true
system_specs.workspace = true
urlencoding.workspace = true
util.workspace = true
workspace.workspace = true
zed_actions.workspace = true
client.workspace = true
