[package]
name = "input_latency_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/input_latency_ui.rs"

[dependencies]
zerminal_macros = { workspace = true }
zerminal_macros_types = { workspace = true }
inventory = "0.3"
chrono.workspace = true
collections.workspace = true
gpui = { workspace = true, features = ["input-latency-histogram"] }
hdrhistogram.workspace = true
telemetry.workspace = true
