[package]
name = "language_onboarding"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/python.rs"

[features]
default = []

[dependencies]
zerminal_macros = { workspace = true }
zerminal_macros_types = { workspace = true }
inventory = "0.3"
db.workspace = true
editor.workspace = true
gpui.workspace = true
project.workspace = true
ui.workspace = true
workspace.workspace = true
