[package]
name = "markdown"
version = "0.1.0"
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/markdown.rs"
doctest = false

[features]
test-support = [ "gpui/test-support", "util/test-support",]

[package.edition]
workspace = true

[package.publish]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.base64]
workspace = true

[dependencies.collections]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.gpui]
workspace = true

[dependencies.html5ever]
workspace = true

[dependencies.language]
workspace = true

[dependencies.linkify]
workspace = true

[dependencies.log]
workspace = true

[dependencies.markup5ever_rcdom]
workspace = true

[dependencies.mermaid_render]
path = "../mermaid_render"

[dependencies.pulldown-cmark]
workspace = true

[dependencies.settings]
workspace = true

[dependencies.smallvec]
workspace = true

[dependencies.stacksafe]
workspace = true

[dependencies.sum_tree]
workspace = true

[dependencies.theme]
workspace = true

[dependencies.theme_settings]
workspace = true

[dependencies.ui]
workspace = true

[dependencies.util]
workspace = true

[dev-dependencies.assets]
workspace = true

[dev-dependencies.env_logger]
workspace = true

[dev-dependencies.fs]
workspace = true
features = [ "test-support",]

[dev-dependencies.gpui]
workspace = true
features = [ "test-support",]

[dev-dependencies.gpui_platform]
workspace = true
features = [ "wayland", "x11",]

[dev-dependencies.image]
workspace = true

[dev-dependencies.language]
workspace = true
features = [ "test-support",]

[dev-dependencies.languages]
workspace = true
features = [ "load-grammars",]

[dev-dependencies.node_runtime]
workspace = true

[dev-dependencies.settings]
workspace = true
features = [ "test-support",]

[dev-dependencies.util]
workspace = true
features = [ "test-support",]
