[package]
name = "media"
version = "0.1.0"
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "Bindings to macos media handling APIs for Zed"

[lints]
workspace = true

[lib]
path = "src/media.rs"
doctest = false

[dependencies]
zerminal_macros = { workspace = true }
zerminal_macros_types = { workspace = true }
inventory = "0.3"
anyhow.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
ctor.workspace = true
foreign-types = "0.5"
metal.workspace = true
core-video.workspace = true
objc.workspace = true

[build-dependencies]
bindgen = "0.71"
