[package]
name = "mux"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[lib]
path = "src/mux.rs"

[dependencies]
mux_protocol = { workspace = true }
interprocess = { workspace = true }
tokio = { workspace = true, features = ["full"] }
prost = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
tar = "0.4"
flate2 = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = { workspace = true }
which = { workspace = true }
[dev-dependencies]
tempfile = { workspace = true }
interprocess = { workspace = true, features = ["tokio"] }
tokio = { workspace = true, features = ["full"] }
serde_json = "1.0"
