[package]
name = "mux_server"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lib]
path = "src/mux_server.rs"

[[bin]]
name = "z3rm-server"
path = "src/main.rs"

[dependencies]
mux_protocol = { workspace = true }
alacritty_terminal = { workspace = true }
portable-pty = { workspace = true }
gpui_tokio = { workspace = true }
sqlez = { workspace = true }
interprocess = "2"
tokio = { workspace = true, features = ["full"] }
prost = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
