[package]
name = "mux_server"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lib]
path = "src/mux_server.rs"

[[bin]]
name = "z3rm-server"
path = "src/main.rs"

[dependencies]
mux_protocol = { workspace = true }
mux = { workspace = true }
alacritty_terminal = { workspace = true }
portable-pty = { workspace = true }
sqlez = { workspace = true }
interprocess = "2"
tokio = { workspace = true, features = ["full"] }
prost = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
zlog = { workspace = true }
zlog_settings = { workspace = true }
serde = { workspace = true }
dirs = "6.0"
libc = { workspace = true }
nanoid = "0.4"
sysinfo = "0.37"
base64 = "0.22"
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
