[package]
name = "quickjs_runtime"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/quickjs_runtime.rs"

[features]
default = []

[dependencies]
rquickjs = "0.6"
parking_lot = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true, features = ["full"] }
