[package]
name = "scheduler"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/scheduler.rs"
doctest = false

[features]
test-support = []

[dependencies]
zerminal_macros = { workspace = true }
zerminal_macros_types = { workspace = true }
inventory = "0.3"
async-task.workspace = true
backtrace.workspace = true
chrono.workspace = true
flume = "0.11"
futures.workspace = true
parking_lot.workspace = true
rand.workspace = true
web-time.workspace = true