[package]
name = "shadow_snapshot"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[lib]
path = "src/shadow_snapshot.rs"

[dependencies]
rope = { workspace = true }
smallvec = { workspace = true }
lru = { workspace = true }
zstd = "0.13"
sha2 = { workspace = true }
blake3 = "1"
parking_lot = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
