[package]
name = "streaming_diff"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/streaming_diff.rs"

[dependencies]
zerminal_macros = { workspace = true }
zerminal_macros_types = { workspace = true }
inventory = "0.3"
ordered-float.workspace = true
rope.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
util = { workspace = true, features = ["test-support"] }

[[bench]]
name = "streaming_diff"
harness = false
