[package]
name = "vim_mode_setting"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/vim_mode_setting.rs"

[dependencies]
zerminal_macros = { workspace = true }
zerminal_macros_types = { workspace = true }
inventory = "0.3"
gpui.workspace = true
settings.workspace = true
