[package]
name = "watch"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/watch.rs"
doctest = true

[dependencies]
zerminal_macros = { workspace = true }
zerminal_macros_types = { workspace = true }
inventory = "0.3"
parking_lot.workspace = true

[dev-dependencies]
ctor.workspace = true
futures.workspace = true
gpui = { workspace = true, features = ["test-support"] }
zlog.workspace = true
