[package]
name = "windows_resources"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true
[dependencies]
zerminal_macros = { workspace = true }
zerminal_macros_types = { workspace = true }
inventory = "0.3"


[lib]
path = "src/windows_resources.rs"
doctest = false

[target.'cfg(target_os = "windows")'.dependencies]
embed-resource = "3.0"
