[[bin]]
name = "z3rm"
path = "src/main.rs"

[[bin]]
name = "zed_visual_test_runner"
path = "src/visual_test_runner.rs"
required-features = [ "visual-tests"]

[package]
description = "The fast, collaborative code editor."
name = "z3rm"
version = "1.12.0"
license = "GPL-3.0-or-later"
authors = [ "Zed Team <hi@zed.dev>"]
default-run = "z3rm"

[lints]
workspace = true

[features]
tracy = [ "ztracing/tracy"]
track-project-leak = [ "gpui/leak-detection"]
test-support = [ "gpui/test-support", "gpui_platform/screen-capture", "workspace/test-support", "project/test-support", "editor/test-support", "terminal_view/test-support", "recent_projects/test-support", "title_bar/test-support"]
visual-tests = [ "gpui/test-support", "gpui_platform/screen-capture", "gpui_platform/test-support", "dep:tempfile", "workspace/test-support", "project/test-support", "editor/test-support", "terminal_view/test-support", "clock/test-support", "db/test-support", "fs/test-support", "recent_projects/test-support", "title_bar/test-support"]

[package.edition]
workspace = true

[package.publish]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.askpass]
workspace = true

[dependencies.assets]
workspace = true

[dependencies.auto_update]
workspace = true

[dependencies.auto_update_ui]
workspace = true

[dependencies.cli]
workspace = true

[dependencies.collections]
workspace = true

[dependencies.command_palette]
workspace = true

[dependencies.component]
workspace = true

[dependencies.crashes]
workspace = true

[dependencies.db]
workspace = true

[dependencies.diagnostics]
workspace = true

[dependencies.editor]
workspace = true

[dependencies.encoding_selector]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.extension]
workspace = true

[dependencies.extension_host]
workspace = true

[dependencies.extensions_ui]
workspace = true

[dependencies.feature_flags]
workspace = true

[dependencies.file_finder]
workspace = true

[dependencies.fs]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.git]
workspace = true

[dependencies.git_hosting_providers]
workspace = true

[dependencies.git_ui]
workspace = true

[dependencies.go_to_line]
workspace = true

[dependencies.gpui]
workspace = true
features = [ "input-latency-histogram"]

[dependencies.gpui_platform]
workspace = true
features = [ "screen-capture", "font-kit", "wayland", "x11"]

[dependencies.hdrhistogram]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.tempfile]
workspace = true
optional = true

[dependencies.clock]
workspace = true
optional = true

[dependencies.gpui_tokio]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.http_client]
workspace = true

[dependencies.json_schema_store]
workspace = true

[dependencies.keymap_editor]
workspace = true

[dependencies.language]
workspace = true

[dependencies.language_extension]
workspace = true

[dependencies.language_selector]
workspace = true

[dependencies.languages]
workspace = true
features = [ "load-grammars"]

[dependencies.line_ending_selector]
workspace = true

[dependencies.markdown]
workspace = true

[dependencies.menu]
workspace = true

[dependencies.mux]
workspace = true

[dependencies.dirs]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.notifications]
workspace = true

[dependencies.parking_lot]
workspace = true

[dependencies.paths]
workspace = true

[dependencies.picker]
workspace = true

[dependencies.profiling]
workspace = true

[dependencies.project]
workspace = true

[dependencies.project_panel]
workspace = true

[dependencies.project_symbols]
workspace = true

[dependencies.proto]
workspace = true

[dependencies.recent_projects]
workspace = true

[dependencies.release_channel]
workspace = true

[dependencies.remote]
workspace = true

[dependencies.reqwest_client]
workspace = true

[dependencies.rope]
workspace = true

[dependencies.sandbox]
workspace = true

[dependencies.search]
workspace = true

[dependencies.session]
workspace = true

[dependencies.settings]
workspace = true

[dependencies.settings_profile_selector]
workspace = true

[dependencies.settings_ui]
workspace = true

[dependencies.shellexpand]
workspace = true

[dependencies.sidebar]
workspace = true

[dependencies.smol]
workspace = true

[dependencies.sysinfo]
workspace = true

[dependencies.tab_switcher]
workspace = true

[dependencies.telemetry]
workspace = true

[dependencies.telemetry_events]
workspace = true

[dependencies.terminal_view]
workspace = true

[dependencies.theme]
workspace = true

[dependencies.theme_settings]
workspace = true

[dependencies.theme_extension]
workspace = true

[dependencies.theme_selector]
workspace = true

[dependencies.title_bar]
workspace = true

[dependencies.ztracing]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.ui]
workspace = true

[dependencies.ui_prompt]
workspace = true

[dependencies.url]
workspace = true

[dependencies.urlencoding]
workspace = true

[dependencies.util]
workspace = true

[dependencies.which_key]
workspace = true

[dependencies.workspace]
workspace = true

[dependencies.zed_actions]
workspace = true

[dependencies.zed_env_vars]
workspace = true

[dependencies.zlog]
workspace = true

[dependencies.zlog_settings]
workspace = true

[dependencies.z3rm_macros_types]
workspace = true

[dev-dependencies.editor]
workspace = true
features = [ "test-support"]

[dev-dependencies.gpui]
workspace = true
features = [ "input-latency-histogram", "test-support"]

[dev-dependencies.itertools]
workspace = true

[dev-dependencies.language]
workspace = true
features = [ "test-support"]

[dev-dependencies.project]
workspace = true
features = [ "test-support"]

[dev-dependencies.terminal_view]
workspace = true
features = [ "test-support"]

[dev-dependencies.title_bar]
workspace = true
features = [ "test-support"]

[dev-dependencies.workspace]
workspace = true
features = [ "test-support"]

[dev-dependencies.search]
workspace = true
features = [ "test-support"]

[dev-dependencies.mux_protocol]
workspace = true

[package.metadata.bundle-dev]
icon = [ "resources/app-icon-dev@2x.png", "resources/app-icon-dev.png"]
identifier = "dev.z3rm.Z3rm-Dev"
name = "Z3rm Dev"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = [ "resources/info/*"]
osx_url_schemes = [ "z3rm"]

[package.metadata.bundle-nightly]
icon = [ "resources/app-icon-nightly@2x.png", "resources/app-icon-nightly.png"]
identifier = "dev.z3rm.Z3rm-Nightly"
name = "Z3rm Nightly"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = [ "resources/info/*"]
osx_url_schemes = [ "z3rm"]

[package.metadata.bundle-preview]
icon = [ "resources/app-icon-preview@2x.png", "resources/app-icon-preview.png"]
identifier = "dev.z3rm.Z3rm-Preview"
name = "Z3rm Preview"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = [ "resources/info/*"]
osx_url_schemes = [ "z3rm"]

[package.metadata.bundle-stable]
icon = [ "resources/app-icon@2x.png", "resources/app-icon.png"]
identifier = "dev.z3rm.Z3rm"
name = "Z3rm"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = [ "resources/info/*"]
osx_url_schemes = [ "z3rm"]

[package.metadata.cargo-machete]
ignored = [ "profiling", "zstd", "tracing"]

[target."cfg(target_os = \"linux\")".build-dependencies]
pkg-config = "0.3.22"

[target."cfg(target_os = \"windows\")".dependencies.etw_tracing]
workspace = true

[target."cfg(target_os = \"windows\")".dependencies.gpui]
workspace = true
features = [ "input-latency-histogram", "windows-manifest"]

[target."cfg(any(target_os = \"linux\", target_os = \"freebsd\"))".dependencies.gpui]
workspace = true
features = [ "input-latency-histogram", "wayland", "x11"]

[target."cfg(any(target_os = \"linux\", target_os = \"freebsd\"))".build-dependencies.image]
workspace = true

[dependencies]
z3rm_macros = { workspace = true }
inventory = "0.3"
